--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+kvalobs-model-populate (0.3.3) lucid; urgency=low
+
+  * new version
+
+ -- Vegard Bones <vegard.bones@met.no>  Thu, 21 Jun 2012 12:25:20 +0200
+
+kvalobs-model-populate (0.3.2) lucid; urgency=low
+
+  * new version
+
+ -- Vegard Bones <vegard.bones@met.no>  Tue, 19 Jun 2012 09:37:58 +0200
+
 kvalobs-model-populate (0.3.1) unstable; urgency=low
 
   * Initial Release.
