--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kvalobs-model-populate (0.3.5) precise; urgency=low
+
+  * corrected database connection options
+
+ -- Vegard Bones <vegard.bones@met.no>  Wed, 23 Jul 2014 09:22:25 +0200
+
 kvalobs-model-populate (0.3.4) precise; urgency=low
 
   * Handling 404 from api.met.no as 503
