--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+kvalobs-model-populate (0.3.8) xenial; urgency=medium
+
+  * new version
+
+ -- Vegard Bones <vegard.bones@met.no>  Tue, 03 Sep 2019 08:25:36 +0200
+
+kvalobs-model-populate (0.3.7) xenial; urgency=low
+
+  * new version
+
+ -- Vegard Bones <vegard.bones@met.no>  Mon, 02 Aug 2019 15:41:37 +0100
+
 kvalobs-model-populate (0.3.6) precise; urgency=low
 
   * new version
