--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kvalobs-model-populate (0.4.0-1) UNRELEASED; urgency=medium
+
+  * upgrade to python3
+
+ -- Borge Moe <borge.moe@met.no>  Wed, 03 Mar 2021 15:10:25 +0100
+
 kvalobs-model-populate (0.3.11) xenial; urgency=medium
 
   * Fix python dependencies.
